OCCAMS-466 #comment Modal body now auto-resizes and the backdrop remains static if a form is detected

--- a/src/occams/form/static/styles/main.css
+++ b/src/occams/form/static/styles/main.css
@@ -13,6 +13,15 @@ form label .req {
   color: #b94a48;
 }
 
+form ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+form li {
+}
+
 form .status {
   font-weight: bold;
 }
@@ -26,14 +35,5 @@ form .status {
   margin: 0;
 }
 
-/** Deform overrides **/
 
-.deform ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.deform li {
-}
 
