Reorganized layout/panel configurations

--- a/src/occams/clinical/static/styles/navs.less
+++ b/src/occams/clinical/static/styles/navs.less
@@ -24,7 +24,7 @@
   .active a {
     color:          @text-color;
     font-weight:    bold;
-    margin-bottom:  -3px;
+    padding-bottom: 7px; // bootstrap uses 10px for bottom padding
     border-bottom:  3px solid @nav-header-active-bg;
   }
 }
