OCCAMS-693 #time 1d #comment Using socket.io to process export requests.

--- a/src/occams/clinical/static/styles/login.less
+++ b/src/occams/clinical/static/styles/login.less
@@ -2,9 +2,8 @@
  * Fancier login form
  */
 
-
 .form-login {
-  margin:     0 auto;
+  margin:     @line-height-computed auto;
   max-width:  330px;
   padding:    15px;
 
@@ -41,5 +40,4 @@
     margin-bottom:            10px;
   }
 }
-
 
