Override navbar branding

--- a/src/occams/clinical/static/styles/overrides.less
+++ b/src/occams/clinical/static/styles/overrides.less
@@ -11,3 +11,8 @@
 // Update the base path to relative to the assets directory
 @icon-font-path:        '../libs/bootstrap/fonts/';
 
+.navbar-brand {
+  font-family: 'Exo 2', @font-family-sans-serif;
+  font-weight: bold;
+}
+
