--- a/src/occams/clinical/static/styles/export.less
+++ b/src/occams/clinical/static/styles/export.less
@@ -1,18 +1,52 @@
 /**
  * Export view stylings
  */
-#data_list {
 
-  iframe {
-    display: none;
-  }
 
-  .export-status {
-    // don't show the status until the user actually triggers the download
-    display: none;
+.export {
 
-    &.active {
-      display: block;
+  .panel-heading {
+
+    .export-title {
+      // Increase the line-height so the title is vertically centered
+      line-height: @font-size-small * 3;
     }
+
+    .export-status {
+      text-align: right;
+    }
+
   }
+
+  .export-file {
+    display: inline-block;
+    margin-left: @font-size-base;;
+  }
+
+  .export-details-toggle:after {
+    .glyphicon();
+    content: " \e114";
+  }
+
+  .export-details-toggle.collapsed:after {
+    .glyphicon();
+    content: " \e080";
+  }
+
+  .export-details {
+    background-color: @gray-lighter;
+  }
+
+  &.panel-complete {
+    .panel-success();
+  }
+
+  &.panel-failed {
+    .panel-danger();
+  }
+
+  &.panel-pending {
+    .panel-default();
+  }
+
 }
