--- a/src/occams/clinical/static/styles/export.less
+++ b/src/occams/clinical/static/styles/export.less
@@ -19,7 +19,7 @@
 
   .export-file {
     display: inline-block;
-    margin-left: @font-size-base;;
+    margin-left: @font-size-base;
   }
 
   .export-contents-toggle:after {
@@ -46,6 +46,27 @@
 
   &.panel-pending {
     .panel-default();
+  }
+}
+
+
+#export-faq-sidebar {
+
+  &.affix-top, &.affix {
+    position: static;
+  }
+
+  @media (min-width: @screen-md) {
+
+    &.affix {
+      position: fixed;
+      top: @font-size-large;
+    }
+
+    &.affix-top {
+      position: static;
+      margin-top: 0;
+    }
   }
 
 }
