Added codebook view/download section

--- a/src/occams/studies/static/styles/export.less
+++ b/src/occams/studies/static/styles/export.less
@@ -70,3 +70,21 @@
   }
 
 }
+
+#export-codebook-table {
+  .field { width: 20%; }
+  .version { width: 10%; }
+  .question { width: 30%; }
+  .type { width: 10%; }
+  .is_required{ width: 2.5%; }
+  .is_system { width: 2.5%; }
+  .is_private { width: 2.5%; }
+  .is_collection { width: 2.5%; }
+  .codes {
+    width: 20%;
+    .code{
+      vertical-align: top;
+      padding-right: 3px;
+    }
+  }
+}
