--- a/src/occams/studies/static/styles/main.less
+++ b/src/occams/studies/static/styles/main.less
@@ -14,8 +14,9 @@
 // Components
 
 @import 'alerts.less';
-@import 'tables.less';
+@import 'dropdowns.less';
 @import 'navs.less';
+@import 'tables.less';
 
 // Layouts
 
