--- a/src/occams/form/static/styles/form.less
+++ b/src/occams/form/static/styles/form.less
@@ -1,23 +1,8 @@
-form label.required:after {
+label.required:after {
   /* Match bootstrap's red */
   color: #e32;
   content: ' \25A0';
   vertical-align: super;
-}
-
-/** Default form styling **/
-
-form ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-form li {
-}
-
-form .status {
-  font-weight: bold;
 }
 
 /** Bootstrap Overrides **/
@@ -28,5 +13,3 @@ form .status {
    */
   margin: 0;
 }
-
-
