--- a/src/occams/form/static/styles/main.less
+++ b/src/occams/form/static/styles/main.less
@@ -15,9 +15,11 @@
 // Components
 
 @import 'form.less';
+@import 'navs.less';
 
 // Layouts
 
+@import 'login.less';
 @import 'stickyfoot.less';
 
 // Utilities
