--- a/src/occams/studies/static/styles/main.less
+++ b/src/occams/studies/static/styles/main.less
@@ -8,7 +8,7 @@
 
 // Overrides
 
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,700);
+@import url(//fonts.googleapis.com/css?family=Exo+2:400,700);
 @import 'overrides.less';
 
 // Components
