Restructured project for pyramid platform

--- a/src/occams/form/static/styles/main.less
+++ b/src/occams/form/static/styles/main.less
@@ -16,6 +16,7 @@
 
 @import 'form.less';
 @import 'navs.less';
+@import 'navbar.less';
 
 // Layouts
 
@@ -23,6 +24,7 @@
 @import 'stickyfoot.less';
 
 // Utilities
-
+@import 'spin.less';
 
 // Views
+@import 'home.less';
