Able to load field data into draggable/sortable listing for editor

--- a/src/occams/forms/static/styles/main.less
+++ b/src/occams/forms/static/styles/main.less
@@ -6,6 +6,9 @@
 
 @import '../libs/bootstrap/less/bootstrap.less';
 
+@import '../libs/font-awesome/less/font-awesome.less';
+@fa-font-path: '../libs/font-awesome/fonts/';
+
 // Overrides
 
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,700);
@@ -23,8 +26,6 @@
 @import 'login.less';
 @import 'stickyfoot.less';
 
-// Utilities
-@import 'spin.less';
-
 // Views
-@import 'home.less';
+@import 'form-list.less';
+@import 'version-edit.less';
