--- a/src/occams/forms/static/styles/navbar.less
+++ b/src/occams/forms/static/styles/navbar.less
@@ -1,6 +1,6 @@
 .navbar {
   .navbar-logo {
-    display: inline-block;
+    float: left;
     padding: 9px 15px;
     border-left: 1px solid #E7E7E7;
     border-right: 1px solid #E7E7E7;
