--- a/src/occams/forms/static/styles/form-list.less
+++ b/src/occams/forms/static/styles/form-list.less
@@ -1,7 +1,7 @@
 /**
  * Form listing styles
  */
-[data-view-name='home'] {
+[data-view-name='form_list'] {
 
   // Keep table columns consistent
   #forms {
