--- a/src/occams/forms/static/styles/main.less
+++ b/src/occams/forms/static/styles/main.less
@@ -9,6 +9,8 @@
 @import '../libs/font-awesome/less/font-awesome.less';
 @fa-font-path: '../libs/font-awesome/fonts/';
 
+@import '../libs/bootstrap-datetimepicker/src/less/bootstrap-datetimepicker.less';
+
 // Overrides
 
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,700);
@@ -29,3 +31,4 @@
 // Views
 @import 'form-list.less';
 @import 'version-edit.less';
+@import 'version-print.less';
