--- a/src/occams/forms/static/styles/version-edit.less
+++ b/src/occams/forms/static/styles/version-edit.less
@@ -22,7 +22,7 @@
     [data-type='date']:before { content: "\f073"; }
     [data-type='datetime']:before { content: "\f017"; }
     [data-type='blob']:before { content: "\f0c6"; }
-    [data-type='number']:before { content:  "\f0c3"; }
+    [data-type='number']:before { content:  "\f198"; }
     [data-type='section']:before { content: "\f1dc"; }
     [data-type='string']:before { content: "\f031" }
     [data-type='text']:before { content: "\f1dd"; }
