--- a/src/occams/forms/static/styles/form.less
+++ b/src/occams/forms/static/styles/form.less
@@ -13,3 +13,16 @@ label.required:after {
    */
   margin: 0;
 }
+
+.of-form {
+
+  .of-controls {
+    border-top: 1px solid @gray-lighter;
+    margin-top: @padding-large-vertical;
+    padding-top: @padding-large-vertical;
+    padding-bottom: @padding-base-vertical;
+    text-align: right;
+  }
+
+}
+
