Improved edit layout and added live validation protype

--- a/src/occams/forms/static/styles/version-edit.less
+++ b/src/occams/forms/static/styles/version-edit.less
@@ -71,6 +71,7 @@
 
   // Only show backgroun-highlight when hovering over an editable field
   .ui-sortable-helper,
+  .js-draggable,
   .of-editable:hover {
     cursor: move;
   }
