Reorganized assets to correspond to server-side file structure, it's easier to distinguish the files purpose this way

--- a/src/occams/forms/static/styles/main.less
+++ b/src/occams/forms/static/styles/main.less
@@ -30,5 +30,5 @@
 
 // Views
 @import 'form-list.less';
-@import 'version-edit.less';
+@import 'version-editor.less';
 @import 'version-print.less';
