--- a/src/occams/forms/static/styles/version-editor.less
+++ b/src/occams/forms/static/styles/version-editor.less
@@ -1,7 +1,7 @@
 /**
  * Field listing style sheet
  */
-[data-view-name='version_edit'] {
+[data-view-name='version_editor'] {
 
   // Visual cue for dragging new types, disabled when editing
   .ui-draggable {
