--- a/src/occams/studies/static/styles/stickyfoot.less
+++ b/src/occams/studies/static/styles/stickyfoot.less
@@ -2,36 +2,37 @@
  * Sticky footer styles
  */
 
-@footer-margin-top:  (2 * @line-height-computed);
 @footer-height:      60px;
+@footer-bg-color:    @gray-lighter;
 
-html,
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  height: 100%;
-  // NOTE: The html and body elements cannot have any padding or margin.
+  // margin bottom by footer height
+  margin-bottom: @footer-height;
 }
 
-// Wrapper for page content to push down footer
-#wrap {
-  min-height:  100%;
-  height:      auto !important;
-  height:      100%;
-  margin:      0 auto -(@footer-height + @footer-margin-top); // negative indent footer by its height
-  padding:     0 0 (@footer-height + @footer-margin-top); // pad bottom footer height
+main {
+  // make enough room so that content is not clipped at the top
+  margin-top: 2 * @line-height-computed;
 }
 
-// Set the fixed height of the footer here
 #footer {
-  height:            @footer-height;
-  background-color:  #f5f5f5;
-  margin-top:        @footer-margin-top;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: @footer-height;
+  background-color: @footer-bg-color;
 }
 
 #footer .credit {
-  margin: 20px 0;
+  margin: @line-height-computed 0;
 }
 
 #footer > .container {
   text-align:  center;
 }
-
