Using object-level permissions and add necessary database fixes to continue

--- a/src/occams/studies/static/styles/main.less
+++ b/src/occams/studies/static/styles/main.less
@@ -19,6 +19,7 @@
 @import 'components/alerts.less';
 @import 'components/dropdowns.less';
 @import 'components/forms.less';
+@import 'components/lists.less';
 @import 'components/navs.less';
 @import 'components/navbar.less';
 @import 'components/tables.less';
