Using 315 degree rotation instead of 270

--- a/src/occams/studies/static/styles/components/tables.less
+++ b/src/occams/studies/static/styles/components/tables.less
@@ -25,13 +25,13 @@
  * Centers containt for
  */
 .table-dimensional {
-  tbody {
-    td {
+  > tbody {
+    > td {
       vertical-align:  middle;
       text-align:      center;
     }
 
-    th {
+    > th {
       border-right: 2px solid @table-border-color !important;
     }
   }
