Added number of versions in form bar

--- a/src/occams/studies/static/styles/views-study.less
+++ b/src/occams/studies/static/styles/views-study.less
@@ -2,7 +2,6 @@
 
   #js-schedule {
     position: relative;
-    z-index: 9999;
   }
 
   #js-schedule table {
@@ -40,10 +39,11 @@
 
     .form {
       width: 20em;
-      > div {
+      a {
+        display: inline-block;
         text-overflow: ellipsis;
         overflow: hidden;
-        width: 20em;
+        width: 18em;
         white-space: nowrap;
       }
     }
