Cycles are editable

--- a/src/occams/studies/static/styles/views-study.less
+++ b/src/occams/studies/static/styles/views-study.less
@@ -39,7 +39,7 @@
 
     .form {
       width: 20em;
-      a {
+      button {
         display: inline-block;
         text-overflow: ellipsis;
         overflow: hidden;
