--- a/src/occams/studies/static/styles/forms.less
+++ b/src/occams/studies/static/styles/forms.less
@@ -1,7 +1,5 @@
-.form-group.required {
-  label:after {
-    color: @brand-danger;
-    content: ' \25A0';
-    vertical-align: super;
-  }
+label.required:after {
+  color: @brand-danger;
+  content: ' \25A0';
+  vertical-align: super;
 }
