Can add forms to a study

--- a/src/occams/studies/static/styles/views-study.less
+++ b/src/occams/studies/static/styles/views-study.less
@@ -54,6 +54,7 @@
     // Remove the a awkward borders from the add button cells
     thead th:last-child {
       border: none;
+      background-color: #fff;
     }
   }
 
@@ -62,6 +63,7 @@
     // Remove the a awkward borders from the add button cells
     tbody tr:last-child > th:first-child {
       border: none;
+      background-color: #fff;
     }
   }
 
