Form/cycle configuration works now

--- a/src/occams/studies/static/styles/views-study.less
+++ b/src/occams/studies/static/styles/views-study.less
@@ -1,5 +1,10 @@
 [data-view-name="study"] {
 
+  .js-clickable-cell:hover {
+    background-color: @alert-info-bg;
+    cursor: pointer;
+  }
+
   #js-schedule {
     position: relative;
   }
