Added delete UI, refactored some css for it

--- a/src/occams/studies/static/styles/main.less
+++ b/src/occams/studies/static/styles/main.less
@@ -36,6 +36,7 @@
 @import 'lists.less';
 @import 'navs.less';
 @import 'navbar.less';
+@import 'pageheader.less';
 @import 'tables.less';
 @import 'stickyfoot.less';
 
