--- a/src/occams/studies/static/styles/navbar.less
+++ b/src/occams/studies/static/styles/navbar.less
@@ -17,3 +17,10 @@
     }
   }
 }
+
+.navbar-static-top {
+  // Add some margin tothe navbar so content does not get clipped
+  margin-bottom: @line-height-computed;
+}
+
+
