--- a/src/occams/forms/static/styles/main.less
+++ b/src/occams/forms/static/styles/main.less
@@ -13,12 +13,12 @@
 
 // Overrides
 
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,700);
 @import 'overrides.less';
 
 
 // Components
 
+@import 'fonts.less';
 @import 'form.less';
 @import 'navs.less';
 @import 'navbar.less';
