Everything working again

--- a/src/occams/forms/static/styles/version-editor.less
+++ b/src/occams/forms/static/styles/version-editor.less
@@ -69,7 +69,7 @@
   }
 
 
-  // Only show backgroun-highlight when hovering over an editable field
+  // Only show background-highlight when hovering over an editable field
   .ui-sortable-helper,
   .js-draggable,
   .of-editable:hover {
