--- a/src/occams/forms/static/styles/navbar.less
+++ b/src/occams/forms/static/styles/navbar.less
@@ -1,3 +1,8 @@
+.navbar-brand {
+  font-family: 'Exo 2', @font-family-sans-serif;
+  font-weight: bold;
+}
+
 .navbar {
   .navbar-logo {
     float: left;
