Do not use subdirectoy-globs, python sucks at this

--- a/src/occams/forms/static/styles/main.less
+++ b/src/occams/forms/static/styles/main.less
@@ -2,7 +2,9 @@
  * Main CSS File
  */
 
-// Extend bootstrap
+//
+// Setup
+//
 
 @import '../bower_components/bootstrap/less/bootstrap.less';
 @import '../bower_components/font-awesome/less/font-awesome.less';
@@ -19,20 +21,26 @@
 // The navbar margin is a bit excessive
 @navbar-margin-bottom: -(@line-height-computed);
 
-
+//
 // Components
+//
 
 @import 'fonts.less';
 @import 'form.less';
 @import 'navs.less';
 @import 'navbar.less';
 
+//
 // Layouts
+//
 
 @import 'login.less';
 @import 'stickyfoot.less';
 
+//
 // Views
+//
+
 @import 'form-list.less';
 @import 'version-editor.less';
 @import 'version-print.less';
