--- a/src/occams/forms/static/styles/form.less
+++ b/src/occams/forms/static/styles/form.less
@@ -1,6 +1,5 @@
 label.required:after {
-  /* Match bootstrap's red */
-  color: #e32;
+  color: @brand-danger;
   content: ' \25A0';
   vertical-align: super;
 }
