Removed dependence on py-good

--- a/src/occams/forms/static/styles/login.less
+++ b/src/occams/forms/static/styles/login.less
@@ -25,13 +25,13 @@
     font-size: 16px;
   }
 
-  input[type="email"] {
+  input[name="login"] {
     border-bottom-left-radius:   0;
     border-bottom-right-radius:  0;
     margin-bottom:               -1px;
   }
 
-  input[type="password"] {
+  input[name="password"] {
     border-top-left-radius:   0;
     border-top-right-radius:  0;
     margin-bottom:            10px;
