--- a/src/occams/studies/static/styles/fonts.less
+++ b/src/occams/studies/static/styles/fonts.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Exo 2';
-  src: url(../libs/exo2/Exo2-Regular.ttf);
+  src: url(../fonts/exo2/Exo2-Regular.ttf);
 }
 
 @font-face {
   font-family: 'Exo 2';
-  src: url(../libs/exo2/Exo2-Bold.ttf);
+  src: url(../fonts/exo2/Exo2-Bold.ttf);
   font-weight: bold;
 }
