Implemented reference type management via settigns view

--- a/src/occams/studies/static/styles/views-settings.less
+++ b/src/occams/studies/static/styles/views-settings.less
@@ -8,4 +8,14 @@
 
   }
 
+
+  #reference-types-section {
+    col.title { width: 15%; }
+    col.name { width: 15%; }
+    col.description { width: 25%; }
+    col.reference_pattern { width: 15%; }
+    col.reference_hint { width: 15%; }
+    col.action { width: 15%; }
+  }
+
 }
