--- a/src/occams/forms/static/styles/stickyfoot.less
+++ b/src/occams/forms/static/styles/stickyfoot.less
@@ -23,7 +23,7 @@ body {
 // Set the fixed height of the footer here
 #footer {
   height:            @footer-height;
-  background-color:  #f5f5f5;
+  background-color:  @navbar-default-bg;
   margin-top:        @footer-margin-top;
 }
 
