make sorting easier to deal with

--- a/src/occams/forms/static/styles/version-editor.less
+++ b/src/occams/forms/static/styles/version-editor.less
@@ -98,6 +98,11 @@
   .of-delete { border-color: @brand-danger; }
 
   // placeholder for sorting target
+  .of-section-droparea {
+    background-color: @gray-lighter
+  }
+
+  // placeholder for sorting target
   .of-placeholder {
     border: 2px dotted @brand-danger;
   }
