Named-spaced views

--- a/occams_studies/static/styles/views-study.less
+++ b/occams_studies/static/styles/views-study.less
@@ -1,4 +1,4 @@
-[data-view-name="study"] {
+[data-view-name="studies.study"] {
 
   .js-clickable-cell:hover {
     background-color: @alert-info-bg;
