Subclass baseline utility form for sanitizing input

--- a/occams_forms/static/styles/form-list.less
+++ b/occams_forms/static/styles/form-list.less
@@ -1,7 +1,7 @@
 /**
  * Form listing styles
  */
-[data-view-name='form_list'] {
+[data-view-name='forms.main'] {
 
   // Keep table columns consistent
   #forms {
