--- a/occams_forms/static/styles/form-list.less
+++ b/occams_forms/static/styles/form-list.less
@@ -1,7 +1,7 @@
 /**
  * Form listing styles
  */
-[data-view-name='forms.main'] {
+[data-view-name='forms.index'] {
 
   // Keep table columns consistent
   #forms {
