Implement external services UI for patient view

--- a/occams_studies/static/styles/main.less
+++ b/occams_studies/static/styles/main.less
@@ -33,6 +33,7 @@
 @import 'navbar.less';
 @import 'pageheader.less';
 @import 'tables.less';
+@import 'type.less';
 @import 'stickyfoot.less';
 
 @import 'views-export.less';
